--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
         <div class="display">
             <h1 class="time-left"></h1>
             <p class="end-time"></p>
-            <div id="btns" style="display: none;">
-                <span><button type="button" class="pause">Pause</button></span>
-                <span><button type="button" class="stop">Stop</button></span>
+            <div id="btn">
+                <button type="button" class="pause" hidden>Pause</button>
             </div>
         </div>
     </div>
